--- a/appstate.json
+++ b/appstate.json
@@ -1,1 +1,119 @@
-এখানে আপনার কুকি বসান ✅
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261579431685647%22%3A%22xgjRXJFX%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2025-08-22T17:44:30.912Z",
+        "lastAccessed": "2025-08-22T17:44:30.913Z"
+    },
+    {
+        "key": "datr",
+        "value": "82-baOrop7PL6BavW1VZxG1q",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T17:44:30.913Z",
+        "lastAccessed": "2025-08-22T17:44:30.913Z"
+    },
+    {
+        "key": "sb",
+        "value": "82-baPNxRXlOFrjVPSMG3-Vl",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T17:44:30.913Z",
+        "lastAccessed": "2025-08-22T17:44:30.913Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61579431685647",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T17:44:30.913Z",
+        "lastAccessed": "2025-08-22T17:44:30.913Z"
+    },
+    {
+        "key": "xs",
+        "value": "40%3AjTyx2Hl7Mp7BEg%3A2%3A1755017866%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T17:44:30.913Z",
+        "lastAccessed": "2025-08-22T17:44:30.913Z"
+    },
+    {
+        "key": "pas",
+        "value": "61579431685647%3A4QQbkQtCPt",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T17:44:30.913Z",
+        "lastAccessed": "2025-08-22T17:44:30.913Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B797x391x1.84375",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T17:44:30.913Z",
+        "lastAccessed": "2025-08-22T17:44:30.913Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T17:44:30.913Z",
+        "lastAccessed": "2025-08-22T17:44:30.913Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T17:44:30.913Z",
+        "lastAccessed": "2025-08-22T17:44:30.913Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T17:44:30.913Z",
+        "lastAccessed": "2025-08-22T17:44:30.913Z"
+    },
+    {
+        "key": "fr",
+        "value": "0INnLhgjXAJsINzZ1.AWcdQPd22c5zfBiktlm4kUoJ-tjXxCZkncn2YTboQJfvQDf6wDE.Bom2_z..AAA.0.0.BoqKx4.AWcLIlH__uvjR8ixHEUxD4gPCDA",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T17:44:30.913Z",
+        "lastAccessed": "2025-08-22T17:44:30.913Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "100735453%3BT%3A29264744",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T17:44:30.913Z",
+        "lastAccessed": "2025-08-22T17:44:30.913Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2899%3Btimestamp%3A1755884664",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T17:44:30.913Z",
+        "lastAccessed": "2025-08-22T17:44:30.913Z"
+    }
+]
