--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:44:30.912Z",
-        "lastAccessed": "2025-08-22T17:44:30.913Z"
+        "creation": "2025-08-22T17:53:49.290Z",
+        "lastAccessed": "2025-08-22T17:53:49.293Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:44:30.913Z",
-        "lastAccessed": "2025-08-22T17:44:30.913Z"
+        "creation": "2025-08-22T17:53:49.293Z",
+        "lastAccessed": "2025-08-22T17:53:49.293Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:44:30.913Z",
-        "lastAccessed": "2025-08-22T17:44:30.913Z"
+        "creation": "2025-08-22T17:53:49.293Z",
+        "lastAccessed": "2025-08-22T17:53:49.293Z"
     },
     {
         "key": "c_user",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:44:30.913Z",
-        "lastAccessed": "2025-08-22T17:44:30.913Z"
+        "creation": "2025-08-22T17:53:49.293Z",
+        "lastAccessed": "2025-08-22T17:53:49.293Z"
     },
     {
         "key": "xs",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:44:30.913Z",
-        "lastAccessed": "2025-08-22T17:44:30.913Z"
+        "creation": "2025-08-22T17:53:49.293Z",
+        "lastAccessed": "2025-08-22T17:53:49.293Z"
     },
     {
         "key": "pas",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:44:30.913Z",
-        "lastAccessed": "2025-08-22T17:44:30.913Z"
+        "creation": "2025-08-22T17:53:49.293Z",
+        "lastAccessed": "2025-08-22T17:53:49.293Z"
     },
     {
         "key": "vpd",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:44:30.913Z",
-        "lastAccessed": "2025-08-22T17:44:30.913Z"
+        "creation": "2025-08-22T17:53:49.293Z",
+        "lastAccessed": "2025-08-22T17:53:49.293Z"
     },
     {
         "key": "ps_l",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:44:30.913Z",
-        "lastAccessed": "2025-08-22T17:44:30.913Z"
+        "creation": "2025-08-22T17:53:49.293Z",
+        "lastAccessed": "2025-08-22T17:53:49.293Z"
     },
     {
         "key": "ps_n",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:44:30.913Z",
-        "lastAccessed": "2025-08-22T17:44:30.913Z"
+        "creation": "2025-08-22T17:53:49.293Z",
+        "lastAccessed": "2025-08-22T17:53:49.293Z"
     },
     {
         "key": "locale",
@@ -86,34 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:44:30.913Z",
-        "lastAccessed": "2025-08-22T17:44:30.913Z"
+        "creation": "2025-08-22T17:53:49.294Z",
+        "lastAccessed": "2025-08-22T17:53:49.294Z"
     },
     {
         "key": "fr",
-        "value": "0INnLhgjXAJsINzZ1.AWcdQPd22c5zfBiktlm4kUoJ-tjXxCZkncn2YTboQJfvQDf6wDE.Bom2_z..AAA.0.0.BoqKx4.AWcLIlH__uvjR8ixHEUxD4gPCDA",
+        "value": "0INnLhgjXAJsINzZ1.AWfxSDX1d6y2NsKudgt1QTjVrmdZXSeGJf8u8eUSfmFJITqAwt4.Bom2_z..AAA.0.0.BoqK6n.AWdiZrcaq9OuPVOTear-neYOP-M",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:44:30.913Z",
-        "lastAccessed": "2025-08-22T17:44:30.913Z"
+        "creation": "2025-08-22T17:53:49.294Z",
+        "lastAccessed": "2025-08-22T17:53:49.294Z"
     },
     {
         "key": "fbl_st",
-        "value": "100735453%3BT%3A29264744",
+        "value": "100730022%3BT%3A29264753",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:44:30.913Z",
-        "lastAccessed": "2025-08-22T17:44:30.913Z"
+        "creation": "2025-08-22T17:53:49.294Z",
+        "lastAccessed": "2025-08-22T17:53:49.294Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2899%3Btimestamp%3A1755884664",
+        "value": "v2%3Bclient_version%3A2899%3Btimestamp%3A1755885223",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:44:30.913Z",
-        "lastAccessed": "2025-08-22T17:44:30.913Z"
+        "creation": "2025-08-22T17:53:49.294Z",
+        "lastAccessed": "2025-08-22T17:53:49.294Z"
     }
 ]
