--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261579431685647%22%3A%22xgjRXJFX%22%7D",
+        "value": "%7B%2261579431685647%22%3A%22xgjRXJFX%22%2C%2261579650214883%22%3A%22YxbidOyh%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:53:49.290Z",
-        "lastAccessed": "2025-08-22T17:53:49.293Z"
+        "creation": "2025-08-22T18:15:47.063Z",
+        "lastAccessed": "2025-08-22T18:15:47.064Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:53:49.293Z",
-        "lastAccessed": "2025-08-22T17:53:49.293Z"
+        "creation": "2025-08-22T18:15:47.064Z",
+        "lastAccessed": "2025-08-22T18:15:47.064Z"
     },
     {
         "key": "sb",
@@ -23,35 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:53:49.293Z",
-        "lastAccessed": "2025-08-22T17:53:49.293Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61579431685647",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-22T17:53:49.293Z",
-        "lastAccessed": "2025-08-22T17:53:49.293Z"
-    },
-    {
-        "key": "xs",
-        "value": "40%3AjTyx2Hl7Mp7BEg%3A2%3A1755017866%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-22T17:53:49.293Z",
-        "lastAccessed": "2025-08-22T17:53:49.293Z"
-    },
-    {
-        "key": "pas",
-        "value": "61579431685647%3A4QQbkQtCPt",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-08-22T17:53:49.293Z",
-        "lastAccessed": "2025-08-22T17:53:49.293Z"
+        "creation": "2025-08-22T18:15:47.064Z",
+        "lastAccessed": "2025-08-22T18:15:47.064Z"
     },
     {
         "key": "vpd",
@@ -59,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:53:49.293Z",
-        "lastAccessed": "2025-08-22T17:53:49.293Z"
+        "creation": "2025-08-22T18:15:47.064Z",
+        "lastAccessed": "2025-08-22T18:15:47.064Z"
     },
     {
         "key": "ps_l",
@@ -68,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:53:49.293Z",
-        "lastAccessed": "2025-08-22T17:53:49.293Z"
+        "creation": "2025-08-22T18:15:47.064Z",
+        "lastAccessed": "2025-08-22T18:15:47.064Z"
     },
     {
         "key": "ps_n",
@@ -77,43 +50,88 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:53:49.293Z",
-        "lastAccessed": "2025-08-22T17:53:49.293Z"
+        "creation": "2025-08-22T18:15:47.064Z",
+        "lastAccessed": "2025-08-22T18:15:47.064Z"
     },
     {
-        "key": "locale",
-        "value": "en_GB",
+        "key": "m_pixel_ratio",
+        "value": "1.84375",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:53:49.294Z",
-        "lastAccessed": "2025-08-22T17:53:49.294Z"
+        "creation": "2025-08-22T18:15:47.064Z",
+        "lastAccessed": "2025-08-22T18:15:47.064Z"
+    },
+    {
+        "key": "wd",
+        "value": "391x895",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T18:15:47.064Z",
+        "lastAccessed": "2025-08-22T18:15:47.064Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61579650214883",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T18:15:47.064Z",
+        "lastAccessed": "2025-08-22T18:15:47.064Z"
+    },
+    {
+        "key": "xs",
+        "value": "7%3A7uSqVSEY6BJLjw%3A2%3A1755886527%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T18:15:47.064Z",
+        "lastAccessed": "2025-08-22T18:15:47.064Z"
     },
     {
         "key": "fr",
-        "value": "0INnLhgjXAJsINzZ1.AWfxSDX1d6y2NsKudgt1QTjVrmdZXSeGJf8u8eUSfmFJITqAwt4.Bom2_z..AAA.0.0.BoqK6n.AWdiZrcaq9OuPVOTear-neYOP-M",
+        "value": "0INnLhgjXAJsINzZ1.AWcs-v4D_NvuciS47shcb82f4UEIj-QGTZjkpVMDfGQHQwSv4GM.Bom2_z..AAA.0.0.BoqLPD.AWdvptAvyfDXXgE4gc2PvanzPTA",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:53:49.294Z",
-        "lastAccessed": "2025-08-22T17:53:49.294Z"
+        "creation": "2025-08-22T18:15:47.064Z",
+        "lastAccessed": "2025-08-22T18:15:47.064Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_US",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T18:15:47.064Z",
+        "lastAccessed": "2025-08-22T18:15:47.064Z"
+    },
+    {
+        "key": "pas",
+        "value": "61579431685647%3A4QQbkQtCPt%2C61579650214883%3A8GRB6KhDzo",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-08-22T18:15:47.064Z",
+        "lastAccessed": "2025-08-22T18:15:47.064Z"
     },
     {
         "key": "fbl_st",
-        "value": "100730022%3BT%3A29264753",
+        "value": "101628956%3BT%3A29264775",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:53:49.294Z",
-        "lastAccessed": "2025-08-22T17:53:49.294Z"
+        "creation": "2025-08-22T18:15:47.064Z",
+        "lastAccessed": "2025-08-22T18:15:47.064Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2899%3Btimestamp%3A1755885223",
+        "value": "v2%3Bclient_version%3A2899%3Btimestamp%3A1755886532",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-08-22T17:53:49.294Z",
-        "lastAccessed": "2025-08-22T17:53:49.294Z"
+        "creation": "2025-08-22T18:15:47.064Z",
+        "lastAccessed": "2025-08-22T18:15:47.064Z"
     }
 ]
