--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "─꯭─⃝‌‌𝐒𝐡𝐚𝐡𝐚𝐝𝐚𝐭 𝐂𝐡𝐚𝐭 𝐁𝐨𝐭",
+    "BOTNAME": "💝𝐊𝐮𝐬𝐡𝐭𝐢𝐚 𝐂𝐡𝐚𝐭 𝐁𝐨𝐭💝",
     "PREFIX": "/",
     "ADMINBOT": [
         "100050606712881",
